<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_outline_filter_alt_24"
        android:title="@string/menu_item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/clear_all"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/logcat_clear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/copy_all"
        android:icon="@drawable/ic_copy"
        android:title="@string/logcat_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy_filtered"
        android:title="@string/logcat_copy_filtered"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_latest_crash"
        android:title="@string/logcat_copy_latest_crash"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_latest_errors"
        android:title="@string/logcat_copy_latest_errors"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_filtered"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/logcat_share_filtered"
        app:showAsAction="never" />
</menu>